Added readme, idepotency, refresh token
